--- a/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
+++ b/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
@@ -1,15 +1,12 @@
-
-
 ### 操作系统初始化配置
 
 ~~~shell
 ##操作系统初始化配置
 ##两台主机都执行
 ##安装常用软件包
-yum -y install wget bash-completion net-tools vim net-tools
+sudo yum -y install wget bash-completion net-tools vim net-tools
 #关闭防火墙,内网可以关,公网不能关
-systemctl stop firewalld
-systemctl disable firewalld
+sudo systemctl stop firewalld && sudo systemctl disable firewalld
 
 # 关闭selinux
 sed -i 's/enforcing/disabled/' /etc/selinux/config  # 永久
@@ -20,8 +17,9 @@ hostnamectl set-hostname <hostname>
 
 # 在master添加hosts
 cat >> /etc/hosts << EOF
-192.168.1.170 k8s-master170
-192.168.1.171 k8s-node171
+192.168.56.138    master-10
+192.168.56.139    node-10
+192.168.56.140    node-11
 EOF
 
 # 将桥接的IPv4流量传递到iptables的链
@@ -33,12 +31,10 @@ sysctl --system  # 生效
 
 # 同步时间
 yum install -y chrony
-systemctl restart chronyd && systemctl enable chronyd &&  systemctl status chronyd
+sudo systemctl restart chronyd && sudo systemctl enable chronyd && sudo systemctl status chronyd
 
 
 ~~~
-
-
 
 ### 准备cfssl证书生成工具
 
@@ -50,10 +46,7 @@ systemctl restart chronyd && systemctl enable chronyd &&  systemctl status chron
 [root@k8s-master170 ~]# mv cfssl_linux-amd64 /usr/local/bin/cfssl
 [root@k8s-master170 ~]# mv cfssljson_linux-amd64 /usr/local/bin/cfssljson
 [root@k8s-master170 ~]# mv cfssl-certinfo_linux-amd64 /usr/bin/cfssl-certinfo
-
 ~~~
-
-
 
 ### 生成Etcd证书
 
@@ -146,8 +139,6 @@ EOF
 
 ~~~
 
-
-
 ### 部署Etcd集群
 
 ~~~shell
@@ -164,13 +155,13 @@ EOF
 #[Member]
 ETCD_NAME="etcd-1"
 ETCD_DATA_DIR="/var/lib/etcd/default.etcd"
-ETCD_LISTEN_PEER_URLS="https://192.168.1.170:2380"
-ETCD_LISTEN_CLIENT_URLS="https://192.168.1.170:2379"
+ETCD_LISTEN_PEER_URLS="https://192.168.56.138:2380"
+ETCD_LISTEN_CLIENT_URLS="https://192.168.56.138:2379"
 
 #[Clustering]
-ETCD_INITIAL_ADVERTISE_PEER_URLS="https://192.168.1.170:2380"
-ETCD_ADVERTISE_CLIENT_URLS="https://192.168.1.170:2379"
-ETCD_INITIAL_CLUSTER="etcd-1=https://192.168.1.170:2380,etcd-2=https://192.168.1.171:2380"
+ETCD_INITIAL_ADVERTISE_PEER_URLS="https://192.168.56.138:2380"
+ETCD_ADVERTISE_CLIENT_URLS="https://192.168.56.138:2379"
+ETCD_INITIAL_CLUSTER="etcd-1=https://192.168.56.138:2380,etcd-2=https://192.168.56.139:2380,etcd-3=https://192.168.56.140:2380"
 ETCD_INITIAL_CLUSTER_TOKEN="etcd-cluster"
 ETCD_INITIAL_CLUSTER_STATE="new"
 EOF
@@ -194,8 +185,6 @@ EOF
 ##ETCD_INITIAL_CLUSTER_STATE：加入集群的当前状态，new是新集群，existing表示加入已有集群
 
 ~~~
-
-
 
 ### systemd管理etcd
 
@@ -242,23 +231,21 @@ ll /opt/etcd/ssl/
 [root@k8s-master170 ~]# systemctl enable etcd
 ~~~
 
-
-
 ### 给Node节点配置etcd
 
 ~~~shell
 [root@k8s-master170 ~]# scp -r /opt/etcd/ root@192.168.1.171:/opt/
 [root@k8s-node171 ~]# vi /opt/etcd/cfg/etcd.conf
 #[Member]
-ETCD_NAME="etcd-2"
+ETCD_NAME="etcd2"
 ETCD_DATA_DIR="/var/lib/etcd/default.etcd"
-ETCD_LISTEN_PEER_URLS="https://192.168.1.171:2380"
-ETCD_LISTEN_CLIENT_URLS="https://192.168.1.171:2379"
+ETCD_LISTEN_PEER_URLS="https://192.168.56.138:2380"
+ETCD_LISTEN_CLIENT_URLS="https://192.168.56.138:2379"
 
 #[Clustering]
-ETCD_INITIAL_ADVERTISE_PEER_URLS="https://192.168.1.171:2380"
-ETCD_ADVERTISE_CLIENT_URLS="https://192.168.1.171:2379"
-ETCD_INITIAL_CLUSTER="etcd-1=https://192.168.1.170:2380,etcd-2=https://192.168.1.171:2380"
+ETCD_INITIAL_ADVERTISE_PEER_URLS="https://192.168.56.138:2380"
+ETCD_ADVERTISE_CLIENT_URLS="https://192.168.56.138:2379"
+ETCD_INITIAL_CLUSTER="etcd1=https://192.168.56.138:2380,etcd2=https://192.168.56.139:2380,etcd3=https://192.168.56.140:2380"
 ETCD_INITIAL_CLUSTER_TOKEN="etcd-cluster"
 ETCD_INITIAL_CLUSTER_STATE="new"
 
@@ -283,17 +270,16 @@ Created symlink from /etc/systemd/system/multi-user.target.wants/etcd.service to
 
 ~~~
 
-
-
 ### 查看集群状态
 
 ~~~shell
-[root@k8s-node171 ~]# ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.1.170:2379,https://192.168.1.171:2379" endpoint health
+# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379" endpoint status --write-out=table
+# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379" get /test/testkey
+
+[root@k8s-node171 ~]# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379" endpoint health
 https://192.168.1.171:2379 is healthy: successfully committed proposal: took = 26.729624ms
 https://192.168.1.170:2379 is healthy: successfully committed proposal: took = 16.280441ms
 ~~~
-
-
 
 ### 安装Docker
 
@@ -302,8 +288,8 @@ https://192.168.1.170:2379 is healthy: successfully committed proposal: took = 1
 ##https://download.docker.com/linux/static/stable/x86_64/
 ### 所以节点都执行
 ##解压
-[root@k8s-master170 ~]# tar zxvf docker-20.10.0.tgz
-[root@k8s-master170 ~]# mv docker/* /usr/bin
+[root@k8s-master170 ~]# sudo tar zxvf docker-20.10.0.tgz
+[root@k8s-master170 ~]# sudo mv docker/* /usr/bin
 
 ##systemd管理docker
 [root@k8s-master170 ~]# cat > /usr/lib/systemd/system/docker.service << EOF
@@ -341,14 +327,12 @@ cat > /etc/docker/daemon.json << EOF
 EOF
 
 ##启动并设置开机启动
-[root@k8s-master170 ~]# systemctl daemon-reload
-[root@k8s-master170 ~]# systemctl start docker
-[root@k8s-master170 ~]# systemctl enable docker
+[root@k8s-master170 ~]# sudo systemctl daemon-reload
+[root@k8s-master170 ~]# sudo systemctl start docker
+[root@k8s-master170 ~]# sudo  systemctl enable docker
 
 
 ~~~
-
-
 
 ### 部署Master Node
 
@@ -419,6 +403,18 @@ cat > server-csr.json << EOF
       "192.168.1.174",
       "192.168.1.175",
       "192.168.1.176",
+      "192.168.56.133",
+      "192.168.56.134",
+      "192.168.56.135",
+      "192.168.56.136",
+      "192.168.56.137",
+      "192.168.56.138",
+      "192.168.56.139",
+      "192.168.56.140",
+      "192.168.56.141",
+      "192.168.56.142",
+      "192.168.56.143",
+      "192.168.56.145",
       "kubernetes",
       "kubernetes.default",
       "kubernetes.default.svc",
@@ -448,14 +444,13 @@ EOF
 
 ~~~
 
-
-
 ~~~shell
 #从Github下载二进制文件
 #下载地址：https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.18.md
 #注：打开链接你会发现里面有很多包，下载一个server包就够了，包含了Master和Worker Node二进制文件
 #解压二进制包
 [root@k8s-master170 ~]# mkdir -p /opt/kubernetes/{bin,cfg,ssl,logs}
+[root@k8s-master170 ~]# sudo cp ca.pem ca-key.pem server.pem server-key.pem /opt/kubernetes/ssl/ 
 [root@k8s-master170 ~]# tar zxvf kubernetes-server-linux-amd64.tar.gz
 [root@k8s-master170 ~]# cd kubernetes/server/bin
 [root@k8s-master170 bin]# cp kube-apiserver kube-scheduler kube-controller-manager /opt/kubernetes/bin
@@ -470,10 +465,10 @@ cat > /opt/kubernetes/cfg/kube-apiserver.conf << EOF
 KUBE_APISERVER_OPTS="--logtostderr=false \\
 --v=2 \\
 --log-dir=/opt/kubernetes/logs \\
---etcd-servers=https://192.168.1.170:2379,https://192.168.1.171:2379 \\
---bind-address=192.168.1.170 \\
+--etcd-servers=https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379 \\
+--bind-address=192.168.56.138 \\
 --secure-port=6443 \\
---advertise-address=192.168.1.170 \\
+--advertise-address=192.168.56.138 \\
 --allow-privileged=true \\
 --service-cluster-ip-range=10.0.0.0/24 \\
 --enable-admission-plugins=NamespaceLifecycle,LimitRanger,ServiceAccount,ResourceQuota,NodeRestriction \\
@@ -536,9 +531,9 @@ TLS Bootstraping：Master apiserver启用TLS认证后，Node节点kubelet和kube
 
 #token也可自行生成替换
 [root@k8s-master170 ~]# head -c 16 /dev/urandom | od -An -t x | tr -d ' '
-21c695e62fbb34cf6ecb72a3a6e06129
+35f55b9be7663bfe47b3d709f8ece62c
 cat > /opt/kubernetes/cfg/token.csv << EOF
-21c695e62fbb34cf6ecb72a3a6e06129,kubelet-bootstrap,10001,"system:node-bootstrapper"
+35f55b9be7663bfe47b3d709f8ece62c,kubelet-bootstrap,10001,"system:node-bootstrapper"
 EOF
 
 
@@ -573,23 +568,21 @@ Created symlink from /etc/systemd/system/multi-user.target.wants/kube-apiserver.
 
 ~~~
 
-###  授权kubelet-bootstrap用户允许请求证书
+### 授权kubelet-bootstrap用户允许请求证书 这个必须要正确不然子节点会错误的
 
 ~~~shell
 kubectl create clusterrolebinding kubelet-bootstrap \
 --clusterrole=system:node-bootstrapper \
 --user=kubelet-bootstrap
 
+## clusterrolebinding.rbac.authorization.k8s.io/kubelet-bootstrap 
+
 ~~~
-
-
-
-
 
 ### 部署kube-controller-manager
 
 ~~~shell
-[root@k8s-master170 kubernetes]#
+[root@k8s-master170 kubernetes]#  sudo bash -c "cat > /etc/hosts" <<EOF
 cat > /opt/kubernetes/cfg/kube-controller-manager.conf << EOF
 KUBE_CONTROLLER_MANAGER_OPTS="--logtostderr=false \\
 --v=2 \\
@@ -613,13 +606,11 @@ EOF
 #–cluster-signing-cert-file/–cluster-signing-key-file：自动为kubelet颁发证书的CA，与apiserver保持一致
 ~~~
 
-
-
 ### systemd管理controller-manager
 
 ~~~shell
 [root@k8s-master170 kubernetes]# 
-cat > /usr/lib/systemd/system/kube-controller-manager.service << EOF
+sudo bash -c "cat > /usr/lib/systemd/system/kube-controller-manager.service" << EOF
 [Unit]
 Description=Kubernetes Controller Manager
 Documentation=https://github.com/kubernetes/kubernetes
@@ -648,13 +639,11 @@ EOF
 
 ~~~
 
-
-
 ### 部署kube-scheduler
 
 ~~~shell
 [root@k8s-master170 kubernetes]#
-cat > /opt/kubernetes/cfg/kube-scheduler.conf << EOF
+sudo bash -c "cat > /opt/kubernetes/cfg/kube-scheduler.conf" << EOF
 KUBE_SCHEDULER_OPTS="--logtostderr=false \
 --v=2 \
 --log-dir=/opt/kubernetes/logs \
@@ -671,7 +660,7 @@ EOF
 
 ~~~shell
 [root@k8s-master170 kubernetes]#
-cat > /usr/lib/systemd/system/kube-scheduler.service << EOF
+sudo bash -c "cat > /usr/lib/systemd/system/kube-scheduler.service" << EOF
 [Unit]
 Description=Kubernetes Scheduler
 Documentation=https://github.com/kubernetes/kubernetes
@@ -741,8 +730,6 @@ etcd-1               Healthy   {"health":"true"}
 
 ~~~
 
-
-
 ### 部署Worker Node
 
 ~~~shell
@@ -751,17 +738,15 @@ etcd-1               Healthy   {"health":"true"}
 [root@k8s-master170 bin]# cp kubelet kube-proxy /opt/kubernetes/bin
 ~~~
 
-
-
 ### 部署kubelet
 
 ~~~shell
 [root@k8s-master170 bin]# 
-cat > /opt/kubernetes/cfg/kubelet.conf << EOF
+sudo bash -c "cat > /opt/kubernetes/cfg/kubelet.conf" << EOF
 KUBELET_OPTS="--logtostderr=false \\
 --v=2 \\
 --log-dir=/opt/kubernetes/logs \\
---hostname-override=k8s-master \\
+--hostname-override=master-10 \\
 --network-plugin=cni \\
 --kubeconfig=/opt/kubernetes/cfg/kubelet.kubeconfig \\
 --bootstrap-kubeconfig=/opt/kubernetes/cfg/bootstrap.kubeconfig \\
@@ -784,7 +769,7 @@ EOF
 ### 配置参数文件
 
 ~~~yaml
-cat > /opt/kubernetes/cfg/kubelet-config.yml << EOF
+sudo bash -c "cat > /opt/kubernetes/cfg/kubelet-config.yml" << EOF
 kind: KubeletConfiguration
 apiVersion: kubelet.config.k8s.io/v1beta1
 address: 0.0.0.0
@@ -819,13 +804,11 @@ EOF
 
 ~~~
 
-
-
 ### 生成bootstrap.kubeconfig文件
 
 ~~~shell
-KUBE_APISERVER="https://192.168.1.170:6443" # apiserver IP:PORT
-TOKEN="21c695e62fbb34cf6ecb72a3a6e06129" # 与token.csv里保持一致
+KUBE_APISERVER="https://192.168.56.138:6443" # apiserver IP:PORT
+TOKEN="35f55b9be7663bfe47b3d709f8ece62c" # 与token.csv里保持一致
 
 # 生成 kubelet bootstrap kubeconfig 配置文件
 kubectl config set-cluster kubernetes \
@@ -846,13 +829,11 @@ kubectl config use-context default --kubeconfig=bootstrap.kubeconfig
 
 ~~~
 
-
-
 ### systemd管理kubelet
 
 ~~~shell
 [root@k8s-master170 bin]# 
-cat > /usr/lib/systemd/system/kubelet.service << EOF
+sudo bash -c "cat > /usr/lib/systemd/system/kubelet.service" << EOF
 [Unit]
 Description=Kubernetes Kubelet
 After=docker.service
@@ -873,8 +854,6 @@ EOF
 [root@k8s-master170 bin]# systemctl enable kubelet
 
 ~~~
-
-
 
 ### 批准kubelet证书申请并加入集群
 
@@ -899,13 +878,11 @@ k8s-master   NotReady   <none>   27s   v1.18.0
 
 ~~~
 
-
-
 ### 部署kube-proxy
 
 ~~~shell
 #创建配置文件
-cat > /opt/kubernetes/cfg/kube-proxy.conf << EOF
+sudo bash -c "cat > /opt/kubernetes/cfg/kube-proxy.conf" << EOF
 KUBE_PROXY_OPTS="--logtostderr=false \\
 --v=2 \\
 --log-dir=/opt/kubernetes/logs \\
@@ -918,14 +895,14 @@ EOF
 
 ~~~yaml
 [root@k8s-master170 bin]#
-cat > /opt/kubernetes/cfg/kube-proxy-config.yml << EOF
+sudo bash -c "cat > /opt/kubernetes/cfg/kube-proxy-config.yml" << EOF
 kind: KubeProxyConfiguration
 apiVersion: kubeproxy.config.k8s.io/v1alpha1
 bindAddress: 0.0.0.0
 metricsBindAddress: 0.0.0.0:10249
 clientConnection:
   kubeconfig: /opt/kubernetes/cfg/kube-proxy.kubeconfig
-hostnameOverride: k8s-master
+hostnameOverride: master-10
 clusterCIDR: 10.0.0.0/24
 EOF
 
@@ -937,7 +914,7 @@ EOF
 ## 切换工作目录
 [root@k8s-master170 ~]# cd k8s/
 # 创建证书请求文件
-cat > kube-proxy-csr.json << EOF
+sudo bash -c "cat > kube-proxy-csr.json" << EOF
 {
   "CN": "system:kube-proxy",
   "hosts": [],
@@ -958,7 +935,7 @@ cat > kube-proxy-csr.json << EOF
 EOF
 
 # 生成证书
-cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes kube-proxy-csr.json | cfssljson -bare kube-proxy
+# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes kube-proxy-csr.json | cfssljson -bare kube-proxy
 
 [root@k8s-master170 k8s]# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes kube-proxy-csr.json | cfssljson -bare kube-proxy
 [root@k8s-master170 k8s]# ll kube-proxy*pem
@@ -967,13 +944,11 @@ cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kube
 
 ~~~
 
-
-
 ### 生成kubeconfig文件
 
 ~~~shell
 [root@k8s-master170 k8s]#
-KUBE_APISERVER="https://192.168.1.170:6443"
+KUBE_APISERVER="https://192.168.56.138:6443"
 
 kubectl config set-cluster kubernetes \
   --certificate-authority=/opt/kubernetes/ssl/ca.pem \
@@ -999,13 +974,11 @@ kubectl config use-context default --kubeconfig=kube-proxy.kubeconfig
 [root@k8s-master170 k8s]# cp kube-proxy.kubeconfig /opt/kubernetes/cfg/
 ~~~
 
-
-
 ###  systemd管理kube-proxy
 
 ~~~shell
 [root@k8s-master170 k8s]# 
-cat > /usr/lib/systemd/system/kube-proxy.service << EOF
+sudo bash -c "cat > /usr/lib/systemd/system/kube-proxy.service" << EOF
 [Unit]
 Description=Kubernetes Proxy
 After=network.target
@@ -1031,20 +1004,19 @@ EOF
 
 ~~~
 
-
+## 如果 报错 May 21 03:31:54 node-11 kube-proxy[13250]: E0521 03:31:54.782931   13250 node.go:125] Failed to retrieve node info: nodes "node-11" not found  可能是node 节点没有加入k8s集群
 
 ### 部署CNI网络
 
 ~~~shell
 ###准备好CNI二进制文件
-##下载地址：https://github.com/containernetworking/plugins/releases/download/v0.8.6/cni-plugins-linux-amd64-
-## v0.8.6.tgz
+##下载地址：https://github.com/containernetworking/plugins/releases/download/v0.8.6/cni-plugins-linux-amd64-v0.8.6.tgz
 
 ##解压二进制包并移动到默认工作目录
 [root@k8s-master170 ~]# mkdir -p /opt/cni/bin
 [root@k8s-master170 ~]# tar zxvf cni-plugins-linux-amd64-v0.8.6.tgz -C /opt/cni/bin
 
-[root@k8s-master170 ~]# sed -i -r "s#quay.io/coreos/flannel:.*-amd64#lizhenliang/flannel:v0.12.0-amd64#g" kube-flannel.yml
+[root@k8s-master170 ~]# sed -i -r "s#quay.io/coreos/flannel:.*-amd64#lizhenliang/flannel:v0.12.0-amd64#g" kube-flannel.yml // 可以直接拉取  kube-flannel.yml 文件
 [root@k8s-master170 ~]# kubectl apply -f kube-flannel.yml
 ##需要等待比较长的时间
 [root@k8s-master170 ~]# kubectl get pods -n kube-system
@@ -1056,13 +1028,11 @@ k8s-master   Ready    <none>   28m   v1.18.0
 
 ~~~
 
-
-
 ### 授权apiserver访问kubelet
 
 ~~~yaml
 
-cat > apiserver-to-kubelet-rbac.yaml << EOF
+sudo bash -c "cat > apiserver-to-kubelet-rbac.yaml" << EOF
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -1099,30 +1069,27 @@ subjects:
     name: kubernetes
 EOF
 
-kubectl apply -f apiserver-to-kubelet-rbac.yaml
-[root@k8s-master170 ~]# kubectl apply -f apiserver-to-kubelet-rbac.yaml
+    kubectl apply -f apiserver-to-kubelet-rbac.yaml
+  [ root@k8s-master170 ~]# kubectl apply -f apiserver-to-kubelet-rbac.yaml
 
 ~~~
-
-
 
 ### 新增加Worker Node
 
 ~~~shell
 ##拷贝已部署好的Node相关文件到新节点
 #在Master节点将Worker Node涉及文件拷贝到新节点192.168.1.171
-[root@k8s-master170 ~]# scp -r /opt/kubernetes root@192.168.1.171:/opt/
-[root@k8s-master170 ~]# scp -r /usr/lib/systemd/system/{kubelet,kube-proxy}.service root@192.168.1.171:/usr/lib/systemd/system
+[root@k8s-master170 ~]# scp -r /opt/kubernetes root@192.168.1.171:/opt/   # sudo scp -r /opt/kubernetes root@192.168.56.139:/opt/
+
+[root@k8s-master170 ~]# scp -r /usr/lib/systemd/system/{kubelet,kube-proxy}.service root@192.168.56.139:/usr/lib/systemd/system
 [root@k8s-master170 ~]# scp -r /opt/cni/ root@192.168.1.171:/opt/
 [root@k8s-master170 ~]# scp /opt/kubernetes/ssl/ca.pem root@192.168.1.171:/opt/kubernetes/ssl
 
-##删除kubelet证书和kubeconfig文件
+## 注意旧文件 删除kubelet证书和kubeconfig文件
 [root@k8s-node171 ~]# rm /opt/kubernetes/cfg/kubelet.kubeconfig -rf
 [root@k8s-node171 ~]# rm -rf /opt/kubernetes/ssl/kubelet*
 ##注：这几个文件是证书申请审批后自动生成的，每个Node不同，必须删除重新生成。
 ~~~
-
-
 
 ~~~shell
 
@@ -1132,15 +1099,13 @@ kubectl apply -f apiserver-to-kubelet-rbac.yaml
 [root@k8s-node171 ~]# vi /opt/kubernetes/cfg/kube-proxy-config.yml
 #修改
 #hostnameOverride: k8s-node1
-[root@k8s-node171 ~]# systemctl daemon-reload
-[root@k8s-node171 ~]# systemctl start kubelet
+[root@k8s-node171 ~]# sudo systemctl daemon-reload
+[root@k8s-node171 ~]# sudo systemctl start kubelet
 [root@k8s-node171 ~]# systemctl enable kubelet
-[root@k8s-node171 ~]# systemctl start kube-proxy
+[root@k8s-node171 ~]# sudo systemctl start kube-proxy
 [root@k8s-node171 ~]# systemctl enable kube-proxy
 
 ~~~
-
-
 
 ### 在Master上批准新Node kubelet证书申请
 
@@ -1159,8 +1124,6 @@ NAME         STATUS   ROLES    AGE     VERSION
 k8s-master   Ready    <none>   60m     v1.18.0
 k8s-node1    Ready    <none>   2m24s   v1.18.0
 ~~~
-
-
 
 ### 部署CoreDNS
 
@@ -1352,8 +1315,6 @@ spec:
 
 ~~~
 
-
-
 ~~~shell
 [root@k8s-master170 ~]# kubectl apply -f coredns3.yaml
 ##等待
@@ -1364,8 +1325,6 @@ kube-flannel-ds-9mkl9     1/1     Running   0          22h    192.168.1.171   k8
 kube-flannel-ds-wn9zr     1/1     Running   0          22h    192.168.1.170   k8s-master   <none>           <none>
 
 ~~~
-
-
 
 ~~~yaml
 [root@k8s-master170 ~]# vi busybox.yaml
